update subscribers schema
