# backend/guides/openapi/demo-x.yaml
@@ -23,7 +23,7 @@ paths:
                 properties:
                   own:
                     type: array
-                    description: aapi list which is owned or managed by this user 
+                    description: aapi list which is owned or managed by this user
                     items:
                       $ref: "#/components/schemas/AAPI"
                   subscribe:
@@ -209,8 +209,7 @@ components:
           type: array
           description: The subscribers of this AAPI
           items:
-            type: string
-            example: ["subscriber01", "subscriber02", "subscriber03"]
+            $ref: "#/components/schemas/Subscriber"
         comment:
           type: string
           description: The comment of this AAPI
@@ -229,6 +228,12 @@ components:
           example: "2021-06-08T07:17:40.541Z"
       required:
         - name, aapiOwner, doc, productSuite
+    Subscriber:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of this AAPI
     # Schema for error response body
     Error:
       type: object
