# backend/src/types/aapi.ts
@@ -1,3 +1,5 @@
+import { Subscriber } from './subscriber'
+
 enum Status {
   On = 'on',
   Off = 'off'
@@ -13,7 +15,7 @@ interface IAapi {
   subject: string
   doc: string
   doc_json: string
-  subscribers: []
+  subscribers: Array<Subscriber>
   comment: string
   status: Status
   readonly createdAt?: Date
@@ -30,7 +32,7 @@ type AapiBody = {
   readonly subject: string
   readonly doc: string
   readonly doc_json: string
-  readonly subscribers: []
+  readonly subscribers: Array<Subscriber>
   readonly status: Status
   readonly comment: string
 }
@@ -46,7 +48,7 @@ type MongoAapi = {
   readonly subject: string
   readonly doc: string
   readonly doc_json: string
-  readonly subscribers: []
+  readonly subscribers: Array<Subscriber>
   readonly comment: string
   readonly status: Status
   readonly createdAt?: Date
