# backend/src/types/subscriber.ts
@@ -1,0 +1,5 @@
+type Subscriber = {
+    name: string
+}
+
+export { Subscriber }
